--- a/Ai-Study/LINEARREGRESSION/boston_house_price.ipynb
+++ b/Ai-Study/LINEARREGRESSION/boston_house_price.ipynb
@@ -73,8 +73,8 @@
     "import numpy as np  # 科学计算\n",
     "\n",
     "# 导入必要的机器学习库\n",
-    "from sklearn.model_selection import train_test_split  # 数据集划分\n",
-    "from sklearn.preprocessing import StandardScaler  # 数据标准化\n",
+    "from sklearn.model_selection import train_test_split  # 将数据集划分为训练集和测试集\n",
+    "from sklearn.preprocessing import StandardScaler  # 数据标准化 使其均值为0，标准差为1。\n",
     "from sklearn.linear_model import LinearRegression  # 线性回归模型\n",
     "from sklearn.metrics import mean_squared_error, r2_score  # 模型评估\n",
     "\n",
@@ -100,23 +100,23 @@
     "# 修正目标列名，去除多余空格\n",
     "data.rename(columns={'medv ': 'medv'}, inplace=True)\n",
     "\n",
-    "# 数据集头部\n",
+    "# 数据集头部--显示数据集的前几行，以了解数据结构和内容。\n",
     "data.head()\n",
     "\n",
-    "# 数据集基本信息\n",
+    "# 数据集基本信息--显示数据集的基本信息，包括每列的数据类型、非空值的数量等\n",
     "data.info()\n",
     "\n",
     "\n",
-    "# 数据集的描述性统计信息\n",
+    "# 数据集的描述性统计信息--包括均值、中位数、标准差、最小值、最大值和四分位数。\n",
     "data.describe()\n",
     "\n",
     "\n",
-    "# 检查缺失值情况\n",
+    "# 检查数据集中各列的缺失值数量。\n",
     "missing_values = data.isnull().sum()\n",
     "missing_values\n",
     "\n",
     "\n",
-    "#计算各特征之间的相关性\n",
+    "#计算各特征之间的相关性,以了解特征之间的线性关系\n",
     "correlation_matrix = data.corr()\n",
     "correlation_matrix\n",
     "\n",
@@ -126,21 +126,25 @@
     "y = data['medv']\n",
     "\n",
     "# 将数据分为训练集和测试集\n",
+    "# 数据集划分为训练集和测试集，测试集占20%，随机种子设为42以保证结果的可重复性。\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
     "\n",
-    "# 特征标准化\n",
+    "# 特征标准化--使用StandardScaler对训练数据进行标准化处理。\n",
     "scaler = StandardScaler()\n",
     "X_train = scaler.fit_transform(X_train)\n",
+    "\n",
+    "# 对测试数据进行相同的标准化处理。\n",
     "X_test = scaler.transform(X_test)\n",
     "\n",
     "# 添加一列全为1的列作为偏置项\n",
     "X_train = np.c_[np.ones(X_train.shape[0]), X_train]\n",
     "X_test = np.c_[np.ones(X_test.shape[0]), X_test]\n",
     "\n",
-    "# 初始化模型参数\n",
+    "# 初始化模型参数-参数theta为零向量。\n",
     "theta = np.zeros(X_train.shape[1])\n",
     "\n",
-    "# 定义损失函数（均方误差）\n",
+    "# 定义损失函数（均方误差）--定义损失函数，计算模型预测值与实际值之间的均方误差。\n",
+    "\n",
     "def compute_cost(X, y, theta):\n",
     "    m = len(y)\n",
     "    predictions = X.dot(theta)\n",
@@ -148,6 +152,8 @@
     "    return cost\n",
     "\n",
     "# 梯度下降算法\n",
+    "# 实现梯度下降算法，通过多次迭代更新模型参数，以最小化损失函数。打印每100次迭代的损失函数值。\n",
+    "\n",
     "def gradient_descent(X, y, theta, learning_rate, iterations):\n",
     "    m = len(y)\n",
     "    cost_history = []\n",
@@ -172,7 +178,10 @@
     "theta, cost_history = gradient_descent(X_train, y_train, theta, learning_rate, iterations)\n",
     "\n",
     "# 训练线性回归模型\n",
+    "# LinearRegression(): 创建线性回归模型。\n",
     "model = LinearRegression()\n",
+    "\n",
+    "#model.fit(X_train, y_train): 使用训练数据训练模型。\n",
     "model.fit(X_train, y_train)\n",
     "\n",
     "# 在测试集上进行预测\n",
@@ -180,13 +189,17 @@
     "\n",
     "\n",
     "# 评估模型性能\n",
+    "# mean_squared_error(y_test, y_pred): 计算均方误差（MSE），衡量预测值与实际值之间的平均平方误差，值越小越好。\n",
     "mse = mean_squared_error(y_test, y_pred)\n",
+    "\n",
+    "# r2_score(y_test, y_pred): 计算决定系数（R²），反映模型解释数据变异的程度，值越接近1越好。\n",
     "r2 = r2_score(y_test, y_pred)\n",
     "\n",
     "print(f'均方误差 (MSE): {mse}')\n",
     "print(f'决定系数 (R²): {r2}')\n",
     "\n",
     "# 可视化损失函数值随迭代次数的变化\n",
+    "# 预想结果图　：X轴表示迭代次数 / Y轴表示损失函数值  →  随着迭代次数的增加，损失函数值应逐渐减小并趋于稳定，表明模型参数在收敛。\n",
     "plt.figure(figsize=(10, 6))\n",
     "plt.plot(range(iterations), cost_history, 'b')\n",
     "plt.xlabel('迭代次数', fontproperties='SimHei')\n",
@@ -194,7 +207,8 @@
     "plt.title('损失函数值随迭代次数的变化', fontproperties='SimHei')\n",
     "plt.show()\n",
     "\n",
-    "# 可视化预测值与实际值\n",
+    "# 可视化预测值与实际值的散点图\n",
+    "# 预想结果图　：X轴表示实际值 / Y轴表示预测值。 → 散点应尽可能呈现出对角线的样子，如果是的话 说明本次模型的预测值与实际值较为接近。\n",
     "plt.figure(figsize=(10, 6))\n",
     "plt.scatter(y_test, y_pred, alpha=0.7)\n",
     "plt.plot([y_test.min(), y_test.max()], [y_test.min(), y_test.max()], 'k--', lw=2)\n",
