--- a/Ai-Study/LINEARREGRESSION/boston_house_price.ipynb
+++ b/Ai-Study/LINEARREGRESSION/boston_house_price.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -30,6 +30,7 @@
       " 13  medv     506 non-null    float64\n",
       "dtypes: float64(11), int64(3)\n",
       "memory usage: 55.5 KB\n",
+      "-------------------------------------------------------\n",
       "             crim        zn     indus      chas       nox        rm       age  \\\n",
       "crim     1.000000 -0.200469  0.406583 -0.055892  0.420972 -0.219247  0.352734   \n",
       "zn      -0.200469  1.000000 -0.533828 -0.042697 -0.516604  0.311991 -0.569537   \n",
@@ -60,7 +61,8 @@
       "ptratio -0.232471  0.464741  0.460853  1.000000 -0.177383  0.374044 -0.507787  \n",
       "b        0.291512 -0.444413 -0.441808 -0.177383  1.000000 -0.366087  0.333461  \n",
       "lstat   -0.496996  0.488676  0.543993  0.374044 -0.366087  1.000000 -0.737663  \n",
-      "medv     0.249929 -0.381626 -0.468536 -0.507787  0.333461 -0.737663  1.000000  \n"
+      "medv     0.249929 -0.381626 -0.468536 -0.507787  0.333461 -0.737663  1.000000  \n",
+      "-------------------------------------------------------\n"
      ]
     },
     {
@@ -87,8 +89,13 @@
       "迭代次数 700: 损失函数值 = 11.019993513205346\n",
       "迭代次数 800: 损失函数值 = 10.981844723952083\n",
       "迭代次数 900: 损失函数值 = 10.952652078201904\n",
+      "-------------------------------------------------------\n",
       "均方误差 (MSE): 25.34969307651814\n",
-      "决定系数 (R²): 0.654324487513505\n"
+      "-------------------------------------------------------\n",
+      "决定系数 (R²): 0.654324487513505\n",
+      "-------------------------------------------------------\n",
+      "elaspe:0.000000;train_score:0.750886;test_score:0.668759\n",
+      "-------------------------------------------------------\n"
      ]
     },
     {
@@ -118,7 +125,7 @@
     "import matplotlib.pyplot as plt  # 数据可视化\n",
     "import pandas as pd  # 数据处理和分析\n",
     "import numpy as np  # 科学计算\n",
-    "\n",
+    "import time\n",
     "# 导入必要的机器学习库\n",
     "from sklearn.model_selection import train_test_split  # 将数据集划分为训练集和测试集\n",
     "from sklearn.preprocessing import StandardScaler  # 数据标准化 使其均值为0，标准差为1。\n",
@@ -166,9 +173,10 @@
     "#计算各特征之间的相关性,以了解特征之间的线性关系\n",
     "correlation_matrix = data.corr()\n",
     "correlation_matrix\n",
+    "print('-------------------------------------------------------')\n",
     "# 去观察所有变量之间的相关系数（-1 到　1）\n",
     "print(correlation_matrix)\n",
-    "\n",
+    "print('-------------------------------------------------------')\n",
     "# 可视化相关系数矩阵\n",
     "plt.figure(figsize=(12, 10))\n",
     "plt.matshow(correlation_matrix, cmap='coolwarm', fignum=1)\n",
@@ -251,9 +259,21 @@
     "\n",
     "# r2_score(y_test, y_pred): 计算决定系数（R²），反映模型解释数据变异的程度，值越接近1越好。\n",
     "r2 = r2_score(y_test, y_pred)\n",
-    "\n",
+    "print('-------------------------------------------------------')\n",
     "print(f'均方误差 (MSE): {mse}')\n",
+    "print('-------------------------------------------------------')\n",
     "print(f'决定系数 (R²): {r2}')\n",
+    "print('-------------------------------------------------------')\n",
+    "\n",
+    "# 模型评分\n",
+    "model = LinearRegression()\n",
+    "start = time.process_time()\n",
+    "model.fit(X_train,y_train)\n",
+    "train_score = model.score(X_train,y_train)\n",
+    "test_score = model.score(X_test,y_test)\n",
+    "print(\"elaspe:{0:.6f};train_score:{1:0.6f};test_score:{2:.6f}\"\n",
+    "      .format(time.process_time()-start,train_score,test_score))\n",
+    "print('-------------------------------------------------------')\n",
     "\n",
     "# 可视化损失函数值随迭代次数的变化\n",
     "# 预想结果图　：X轴表示迭代次数 / Y轴表示损失函数值  →  随着迭代次数的增加，损失函数值应逐渐减小并趋于稳定，表明模型参数在收敛。\n",
