--- a/Ai-Study/LINEARREGRESSION/boston_house_price.ipynb
+++ b/Ai-Study/LINEARREGRESSION/boston_house_price.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -89,11 +89,17 @@
       "迭代次数 700: 损失函数值 = 11.019993513205346\n",
       "迭代次数 800: 损失函数值 = 10.981844723952083\n",
       "迭代次数 900: 损失函数值 = 10.952652078201904\n",
-      "-------------------------------------------------------\n",
+      "---MSE : 衡量预测值与实际值之间的平均平方误差，值越小越好。---\n",
+      "\n",
       "均方误差 (MSE): 25.34969307651814\n",
       "-------------------------------------------------------\n",
+      "\n",
+      "--- R² : 反映模型解释数据变异的程度，值越接近1越好---\n",
+      "\n",
       "决定系数 (R²): 0.654324487513505\n",
       "-------------------------------------------------------\n",
+      "\n",
+      "---耗时---训练数据得分---测试数据得分-------------\n",
       "elaspe:0.000000;train_score:0.750886;test_score:0.668759\n",
       "-------------------------------------------------------\n"
      ]
@@ -259,13 +265,19 @@
     "\n",
     "# r2_score(y_test, y_pred): 计算决定系数（R²），反映模型解释数据变异的程度，值越接近1越好。\n",
     "r2 = r2_score(y_test, y_pred)\n",
-    "print('-------------------------------------------------------')\n",
+    "print('---MSE : 衡量预测值与实际值之间的平均平方误差，值越小越好。---')\n",
+    "print('')\n",
     "print(f'均方误差 (MSE): {mse}')\n",
     "print('-------------------------------------------------------')\n",
+    "print('')\n",
+    "print('--- R² : 反映模型解释数据变异的程度，值越接近1越好---')\n",
+    "print('')\n",
     "print(f'决定系数 (R²): {r2}')\n",
     "print('-------------------------------------------------------')\n",
     "\n",
     "# 模型评分\n",
+    "print('')\n",
+    "print('---耗时---训练数据得分---测试数据得分-------------')\n",
     "model = LinearRegression()\n",
     "start = time.process_time()\n",
     "model.fit(X_train,y_train)\n",
